styles/Home.module.css
.emojiContainer {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  align-items: center;
  justify-content: center;
}

.happyImg,
.tiredImg,
.stressedImg {
  width: 100px;
}

.wrapper {
  display: flex;
  text-align: center;
}

@media screen and (max-width: 768px) {
  .happyStressContainer,
  .tiredAllContainer {
    display: flex;
  }

  .wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 150px;
    max-width: 500px;
    text-align: center;
    height: 100vh;
  }
  .text {
    padding: 0px 30px 0px 30px;
    display: flex;
    margin-top: 50px;
  }
  .headline {
    margin-bottom: 50px;
  }
}

